todas as telas prontas

--- a/pages/entrada.html
+++ b/pages/entrada.html
@@ -13,9 +13,12 @@
 </head>
 <body>
     <header class="cabecalho">
+        <div class="btn_voltar">
+            <a href="../pages/home.html">voltar</i></a>
+        </div>
         <div class="wrapper itens_cabecalho">
             <img src="../imgs/Imagem_Logo_SENAI.png" alt="logo da rede de educação senai" class="logo_senai">
-            <a href="../index.html" class="btn_sair">sair</a>
+            <a href="../pages/home.html" class="btn_sair">sair</a>
         </div>
     </header>
     <main>
