--- a/pages/home.html
+++ b/pages/home.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <header class="cabecalho">
+        <div class="btn_voltar">
+            <a href="../index.html">voltar</a>
+        </div>
         <div class="wrapper itens_cabecalho">
             <img src="../imgs/Imagem_Logo_SENAI.png" alt="logo da rede de educação senai" class="logo_senai">
             <a href="../index.html" class="btn_sair">sair</a>
