--- a/pages/entrada.html
+++ b/pages/entrada.html
@@ -18,7 +18,24 @@
         </div>
         <div class="wrapper itens_cabecalho">
             <img src="../imgs/Imagem_Logo_SENAI.png" alt="logo da rede de educação senai" class="logo_senai">
-            <a href="../pages/home.html" class="btn_sair">sair</a>
+           <!-- <a href="../index.html" class="btn_sair">sair</a> -->
+           <button id="btn_modal" class="btn_sair">sair</button>
+
+           <div id="myModal" class="modal">
+
+               <!-- Modal content -->
+               <div class="conteudo_modal">
+                 <p>você tem certeza que deseja sair da sua conta?</p>
+
+                 <div class="posicionamento_btns">
+                     <div class="btns_modal">
+                         <button class="btn_modal_f">fechar</button>
+                         <a href="../index.html" class="btn_modal_ok">ok</a>
+                     </div>
+                 </div>
+               </div>
+             
+           </div>
         </div>
     </header>
     <main>
@@ -76,5 +93,8 @@
     <footer class="rodape">
         <p>copyrigth @ 2022 escola senai de informática</p>
     </footer>
+
+    <script src="../script.js"></script>
+
 </body>
 </html>
