finalizado sem resposividade

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <main class="flex posicionamento_page">
 
-        <img src="./imgs/Imagem_Login.png" alt="imagem em vetor de um funcionario levantando a cancela para um carro" class="img_1">
+        <img src="./imgs/relampago-mcqueen.png" alt="imagem em vetor de um funcionario levantando a cancela para um carro" class="img_1">
 
         <div class="posicionamento_direita">
 
-            <img src="./imgs/Imagem_Logo_SENAI.png" alt="logo da rede de educação senai" class="logo_senai">
+            <img  src="./imgs/Imagem_Logo_SENAI.png" alt="logo da rede de educação senai" class="logo_senai">
     
             <div class="fundo_formulario">
                 <h2 class="titulo_form">login</h2>
