finalizado com resposividade para computadores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main class="flex posicionamento_page">
 
-        <img src="./imgs/relampago-mcqueen.png" alt="imagem em vetor de um funcionario levantando a cancela para um carro" class="img_1">
+        <img src="./imgs/Inkedmcqueen_LI.jpg" alt="imagem em vetor de um funcionario levantando a cancela para um carro" class="img_1">
 
         <div class="posicionamento_direita">
 
