ajustes tela inicial

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main class="flex posicionamento_page">
 
-        <img src="./imgs/Inkedmcqueen_LI.jpg" alt="imagem em vetor de um funcionario levantando a cancela para um carro" class="img_1">
+        <img src="./imgs/Imagem_Login.png" alt="imagem em vetor de um funcionario levantando a cancela para um carro" class="img_1">
 
         <div class="posicionamento_direita">
 
@@ -35,10 +35,9 @@
                         </div>
                     </div>
                     <div class="posicionamento_btn">
-                        <button type="button" class="btn">entrar</button>
+                        <a href="./pages/home.html" class="btn">entrar</a>
                     </div>
                 </form>
-                <a href="./pages/home.html">home</a>
             </div>
         </div>
     </main>
